--- a/web/index.html
+++ b/web/index.html
@@ -27,9 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/ico" href="favicon.ico"/>
 
-  <title>petbuddy_frontend_flutter</title>
+  <title>PawPrint</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
